vbnc/vbnc/tests/Errors/30311-17.vb
Class T
    Const M_Date As Date = 2.0!
End Class